--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!-- AOS ANIMATION -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    
 
     <link rel="stylesheet" href="css/main.min.css" />
     <title>Projeto Neon</title>
@@ -44,6 +43,7 @@
           <span class="linha"></span>
           <span class="linha"></span>
           <span class="linha"></span>
+        </button>
       </div>
     </header>
 
@@ -57,41 +57,41 @@
           <button class="conta">Abra sua conta</button>
         </nav>
         <div class="info">
-          <h3  data-aos="fade-left" data-aos-delay="100" data-aos-duration="1500">Abra sua conta, é só baixar o app!</h3>
-          <h1  data-aos="fade-left" data-aos-delay="200" data-aos-duration="1500">A conta digital certa pra cuidar do seu dinheiro</h1>
-          <button class="btn-primary" data-aos="fade-left" data-aos-delay="350" data-aos-duration="1500">Abra sua conta digital</button>
+          <h3  >Abra sua conta, é só baixar o app!</h3>
+          <h1  >A conta digital certa pra cuidar do seu dinheiro</h1>
+          <button >Abra sua conta digital</button>
 
           <div class="icons-info">
             <ul>
               <li class="container-icon">
-                <div class="icon" data-aos="fade-up" data-aos-delay="220" data-aos-duration="1500">
+                <div class="icon" >
                   <i class="fa-solid fa-credit-card" style="color: #ffffff"></i>
                 </div>
-                <span data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">Cartão sem anuidade</span>
+                <span >Cartão sem anuidade</span>
               </li>
 
               <li class="container-icon">
-                <div class="icon" data-aos="fade-up" data-aos-delay="220" data-aos-duration="1500" >
+                <div class="icon"  >
                   <i class="fa-solid fa-0" style="color: #ffffff"></i>
                 </div>
 
-                <span data-aos="fade-up" data-aos-delay="350" data-aos-duration="1500">Conta digital 100% grátis</span>
+                <span >Conta digital 100% grátis</span>
               </li>
 
               <li class="container-icon">
-                <div class="icon" data-aos="fade-up" data-aos-delay="220" data-aos-duration="1500">
+                <div class="icon" data-aos="fade-up" >
                   <i class="fa-solid fa-dollar-sign" style="color: #ffffff"></i>
                 </div>
-                <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="1500">Seu dinheiro rendendo mais</span>
+                <span >Seu dinheiro rendendo mais</span>
               </li>
             </ul>
           </div>
         </div>
 
         <div class="details-img">
-          <h3 data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">Banco 100% digital</h3>
+          <h3 >Banco 100% digital</h3>
           <div class="container-img">
-            <img src="img/logo-cortado.png" class="bg-icon" alt="" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500"/>
+            <img src="img/logo-cortado.png" class="bg-icon" alt=""/>
             <img src="img/cartao.png" class="card-bg" alt="" />
           </div>
         </div>
@@ -102,34 +102,34 @@
       <div class="container">
         <div class="container-left">
           <div class="phone">
-            <img src="img/circulo.png" alt="bg-circle" class="bg-circle" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1500"/>
-            <img src="img/cel-neon.png" alt="cel-neon" class="bg-phone" data-aos="fade-down" data-aos-delay="70" data-aos-duration="1500" />
+            <img src="img/circulo.png" alt="bg-circle" class="bg-circle"/>
+            <img src="img/cel-neon.png" alt="cel-neon" class="bg-phone" />
           </div>
           <div class="download-app">
-            <img src="img/icon-logo.png" alt="" class="logo" data-aos="fade-down" data-aos-delay="100" data-aos-duration="1500"/>
-            <h3 data-aos="fade-right" data-aos-delay="100" data-aos-duration="1500">Baixe nosso app</h3>
-            <p data-aos="fade-left" data-aos-delay="100" data-aos-duration="1500">
-              que tal abrir uma conta digital para ver como a gente faz sua vida
+            <img src="img/icon-logo.png" alt="" class="logo"/>
+            <h3 data-aos="fade-right">Baixe nosso app</h3>
+            <p data-aos="fade-left">
+              que tal abrir uma conta digital para ver como a gente faz sua vi
               muito mais simples?
             </p>
             <a href=""
-              ><img src="img/app-download.png" alt="" class="download" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500"
+              ><img src="img/app-download.png" alt="" class="download"
             /></a>
           </div>
         </div>
 
         <div class="container-right">
           <div class="info-card" >
-            <h3 data-aos="fade-left" data-aos-delay="50" data-aos-duration="1500">Resolve sua vida direto pelo app Neon!</h3>
+            <h3 data-aos="fade-left">Resolve sua vida direto pelo app Neon!</h3>
             <ul>
               <li>
-                <div class="container-img" data-aos="fade-down-right" data-aos-delay="70" data-aos-duration="1500">
+                <div class="container-img>
                   <img src="img/card-icon.svg" alt=""  />
                 </div>
 
                 <div class="conteudo-list">
-                  <span data-aos="fade-down" data-aos-delay="50" data-aos-duration="1500"> Cartão de crédito sem anuidade</span>
-                  <p data-aos="fade-left" data-aos-delay="50" data-aos-duration="1500">
+                  <span data-aos="fade-down"> Cartão de crédito sem anuidade</span>
+                  <p data-aos="fade-left">
                     conta digital com cartão de crédito sem anuidade e sem
                     complicação
                   </p>
@@ -292,7 +292,7 @@
       </div>
     </section>
 
-     <section class="s-conta-digital">
+      <section class="s-conta-digital">
       <div class="container">
         <div class="container-info">
           <h1 data-aos="fade-right" data-aos-delay="50" data-aos-duration="1500">Aproveite</h1>
